# optics-lecture

./: .gitignore  .gitmodules  CMakeLists.txt
doc/2_2/: 2.md  2_1_projection.txt  2_2_A_projection.txt  2_2_B_projection.txt
lecture/: lecture_2_1_1_1.cpp  lecture_2_1_1_2.cpp  lecture_2_2_2_1.cpp  lecture_2_2_2_2.cpp
